<resources>
    <string name="app_name">SmartGarage</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Password</string>
    <string name="password_again_placeholder">Password again</string>
    <string name="has_no_account">Don\'t have an account?</string>
    <string name="has_account">Have an account?</string>
    <string name="login_prompt">Sign in!</string>
    <string name="create_account_prompt">Create one!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="create_account_btn">Sign up</string>
    <string name="user_name" translatable="false">Example User</string>
    <string name="user_location" translatable="false">Lorem, 16 Nowhere Street</string>
    <string name="auto_handle_delay">Automatic close delay</string>
    <string name="key_auto_handle_delay" translatable="false">key_upload_quality</string>
    <string name="inside_light_timeout">Inside light timeout</string>
    <string name="key_inside_light_timeout" translatable="false">key_inside_light_timeout</string>
    <string name="inside_light_trigg">Turn on inside light</string>
    <string name="key_inside_light_trigg" translatable="false">key_inside_light_trigg</string>
    <string name="outside_light_timeout">Outside light timeout</string>
    <string name="key_outside_light_timeout" translatable="false">key_outside_light_timeout</string>
    <string name="outside_light_trigg">Turn on outside light</string>
    <string name="key_outside_light_trigg" translatable="false">key_outside_light_trigg</string>
    <string name="choose">Choose the desired value!</string>
    <string name="open_notification">Notify me if somebody open the door</string>
    <string name="key_open_notification" translatable="false">key_open_notification</string>
    <string name="close_notification">Notify me when the door closed</string>
    <string name="key_close_notification" translatable="false">key_close_notification</string>
    <string name="arrived_notification">Notify me when the car just occupied the garage.</string>
    <string name="key_arrived_notification" translatable="false">key_arrived_notification</string>
    <string name="left_notification">Notify me when the car left the garage.</string>
    <string name="key_left_notification" translatable="false">key_left_notification</string>
    <string name="left_open_notification">Notify me if the garage is left opened</string>
    <string name="key_left_open_notification" translatable="false">key_left_open_notification</string>
    <string name="left_open_timeset">Notify me if the garage is left opened for more than</string>
    <string name="key_left_open_timeset" translatable="false">key_left_open_timeset</string>
    <string name="history">History</string>
    <string name="schedules">Schedules</string>
    <string name="alerts">Alerts</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="search">Search</string>
    <string name="search_placeholder">Search here</string>
    <string name="start_search_placeholder">Start searching</string>
    <string name="set_time_btn_text">SET TIME</string>
    <string name="from_placeholder">from</string>
    <string name="to_placeholder">to</string>
    <string name="undo">UNDO</string>
    <string name="removed">The entry has been removed.</string>
    <string name="seconds">sec</string>
    <string name="minutes">m</string>
    <string name="hours">h</string>
    <string name="days">d</string>
    <string name="wrong_pin_code">Wrong password. Try again!</string>
    <string name="too_many_tries">Too many unsuccessful tries!</string>
    <string name="wait_until_retry">Wait %1$d seconds and try again.</string>
    <string name="day_spelling_1">day</string>
    <string name="hour_spelling_1">hour</string>
    <string name="minute_spelling_1">minute</string>
    <string name="day_spelling_more">days</string>
    <string name="hour_spelling_more">hours</string>
    <string name="minute_spelling_more">minutes</string>
    <string name="notification_left_open_1st_syntax">Your garage door is opened for</string>
    <string name="notification_left_open_2st_syntax">Did you forget it?</string>
    <string name="door_opened">Your garage just opened</string>
    <string name="door_closed">Your garage just closed</string>
    <string name="car_left">Your car just left</string>
    <string name="car_arrived">Your car just occupied the garage</string>
    <string name="open_entry">The garage was opened.</string>
    <string name="close_entry">The garage was closed.</string>
    <string name="car_left_entry">Your car left.</string>
    <string name="car_arrived_entry">Your car occupied the garage.</string>
    <string name="years">y</string>
    <string name="no_histories">There is nothing to see.</string>

</resources>
