<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_schedules"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedules" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/alerts" />

        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_security"
            android:title="@string/security" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>


</menu>
