<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.TestInputActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:paddingTop="5dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/email_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neou_thin"
                android:text="@string/email_placeholder"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:ems="14"
                android:fontFamily="sans-serif-light"
                android:inputType="textEmailAddress"
                android:longClickable="false"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_holder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neou_thin"
                android:text="@string/password_placeholder"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:ems="14"
                android:fontFamily="sans-serif-light"
                android:inputType="textPassword"
                android:longClickable="false"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login_button_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_holder">

            <Button
                android:id="@+id/login_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="140dp"
                android:layout_height="38dp"
                android:background="@drawable/login_btn"
                android:fontFamily="@font/neou_thin"
                android:text="@string/login"
                android:textColor="@drawable/login_color"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/rounded_ripple"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:text="@string/has_no_account"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4sp"
                    android:alpha="0.9"
                    android:text="@string/create_account_prompt"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:alpha="0.45"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/rounded_ripple"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <me.yugy.github.reveallayout.RevealLayout
        android:id="@+id/reveal_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ghost_white" />
    </me.yugy.github.reveallayout.RevealLayout>
</RelativeLayout>